# IFEM-DiTwi

./: CMakeLists.txt  NelderMead.h  main_DiTwi.C
inner_optimize/: full_model.g2  instance-dyn.xinp  instance.xinp  optimize.py  synthetic.py  template.xinp  topology.xinp
jenkins/: build.sh
optimize/: optimize.py
